# cbpv-refinement-type

./: 1.index.js  1.js  examples.json  index.html  index.js  main.js  package-lock.json  style.css  webpack.config.js
.github/workflows/: github-pages.yml
doc/: search-index.js  source-files.js
doc/lib/: all.html  index.html  sidebar-items.js
doc/lib/context/: index.html  sidebar-items.js  struct.Context.html
doc/lib/lambda/: index.html  sidebar-items.js
doc/lib/logic/: enum.Formula.html  enum.Term.html  fn.remove_pair_sum_unit_empty.html  fn.simplify.html  fn.to_smtlib.html  index.html  sidebar-items.js
doc/lib/refinement/: index.html  sidebar-items.js
doc/main/: all.html  fn.main.html  index.html
impl/: .gitignore  Makefile  constraints.ml  context.ml  hindleyMilner.ml  infer.ml  lambda.ml  logic.ml  main.ml  refinement.ml  syntax.ml  translate.ml  unification.ml  utils.ml
impl-ocaml/: Makefile  constraints.ml  infer.ml  lambda.ml  main.ml  refinement.ml  unification.ml
impl-rust/: Cargo.toml
impl-rust/src/: context.rs  lambda.rs  lib.rs  logic.rs  main.rs  refinement.rs  smtlib.rs  underlying.rs  utils.rs
impl-rust/src/lambda/: parser.rs  term.rs  type.rs
impl-rust/src/refinement/: infer.rs  infer_debug.rs  type.rs
impl-rust/src/underlying/: infer.rs  term.rs  translate.rs  type.rs  unification.rs
impl-rust/tests/: parser.rs
note/: .gitignore  macros.basic.sty  notes.tex  ref.bib
wasm/: Cargo.toml
wasm/site/: examples.json  index.html  index.js  index.ts  package.json  style.css  tsconfig.json  webpack.config.js
wasm/src/: lib.rs
(+91 files in other folders)
