[package]
name = "type-checker"
version = "0.1.0"
authors = ["Satoshi Kura <umedaikiti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
nom = "6"
lazy_static = "1"
regex = "1"
once_cell = "1"
thiserror = "1"
