[package]
name = "type-checker-wasm"
version = "0.1.0"
authors = ["Satoshi Kura <umedaikiti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = "6"
wasm-bindgen = ">= 0.2.7"
type-checker = { path = "../impl-rust" }
