[package]
name = "type-checker-wasm"
version = "0.1.0"
authors = ["Satoshi Kura <umedaikiti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
nom = "6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = ">=0.2.7", features = ["serde-serialize"] }
log = { version = "0.4", features = ["release_max_level_warn"] }
type-checker = { path = "../impl-rust" }
